--- a/css/main.css
+++ b/css/main.css
@@ -4,3 +4,11 @@
   .nav-spacing {
     margin: 0 0 0 10px;
   }
+    .image-link {
+    text-decoration: none
+  }
+      .achtergrond-blok {
+    width: 500px; margin: 20px auto; padding: 30px; background-color: #fafafa;
+  }
+  
+  
